test/library/standard/Random/stonea/fillRandomAssociative.good
$CHPL_HOME/modules/standard/Random.chpl:130: In function 'fillRandom':
$CHPL_HOME/modules/standard/Random.chpl:137: error: fillRandom does not support non-rectangular arrays
  fillRandomAssociative.chpl:5: called as fillRandom(arr: [DefaultAssociativeDom(int(64),true)] real(64), seed: int(64), param algorithm = 1: RNG)
