test/library/standard/Random/stonea/fillRandomAssociative.chpl
use Random;
{
    var assocDom = {1,2,3};
    var arr: [assocDom] real;
    fillRandom(arr);
}
